Alignment fixes

--- a/media/iseratho-print.css
+++ b/media/iseratho-print.css
@@ -63,11 +63,11 @@ body {
 
 p {
 	position: relative;
-	/* left: 25%; */
+	left: 5%;
 	margin-bottom: 0.2em;
 	margin-left: 1em;
 	margin-right: 0;
-	width: 70%;
+	width: 80%;
 }
 
 code {
@@ -81,13 +81,13 @@ code {
 p code {
 	position: absolute;
 	text-align: right;
-	right: -55%;
+	right: -25%;
 }
 
 
 ul {
 	position: relative;
-	left: 25%;
+	left: 5%;
 	width: 75%;
 	margin-bottom: 1em;
 	/*margin-top: -0.5em;*/
@@ -125,8 +125,8 @@ h1 {
 	font-size: 3em;
 	line-height: 1em;
 	position: relative;
-	left: 25%;
-	width: 50%;
+	left: 5%;
+	width: 70%;
 }
 
 h1+p {
@@ -140,6 +140,7 @@ h2 {
 	color: #a00;
 	margin-top: 2em;
 	margin-bottom: 1em;
+	margin-left: 1em;
 	/* position: relative;
 	top: 1.2em;
 	text-align: right;
@@ -153,6 +154,7 @@ h3 {
 	color: #ccc;
 	margin-top: 1em;
 	margin-bottom: 0.5em;
+	margin-left: 1em;
 	/* position: relative;
 	top: 1.6em;
 	text-align: right;
